bk_ida/gccida/g1/finish_eh_generation
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3014:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3016:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3022:1: error: must use 'enum' tag to refer to type 'eh_region_type'
eh_region_type type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3032:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3036:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3096:14: error: expected identifier or '('
 struct htab = htab_create( 0x1FuLL, ehspec_filter_hash, ehspec_filter_eq, free); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3233:18: error: invalid suffix 'xmode' on integer constant
v27 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3262:18: error: invalid suffix 'xmode' on integer constant
v31 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3355:22: error: use of undeclared identifier 'machine_mode'
v40 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), j); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3366:22: error: use of undeclared identifier 'machine_mode'
v43 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 0); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/except.c:3368:31: error: invalid suffix 'xmode' on integer constant
v44 = gen_rtx_REG( *(short *)0xmode, 1); 
                              ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/finish_eh_generation/src/obj/except.o] Error 1
